+++++++++++
Python News
+++++++++++

What's New in Python 3.3.4?
===========================

*Not yet released, see sections below for changes released in 3.3.2*

Core and Builtins
-----------------

Library
-------

- Issue #1575020: Fixed support of 24-bit wave files on big-endian platforms.

- Issue #19480: HTMLParser now accepts all valid start-tag names as defined
  by the HTML5 standard.

- Issue #6157: Fixed tkinter.Text.debug().  Original patch by Guilherme Polo.

- Issue #6160: The bbox() method of tkinter.Spinbox now returns a tuple of

- Issue #10197: Rework subprocess.get[status]output to use subprocess
  functionality and thus to work on Windows. Patch by Nick Coghlan.
  integers instead of a string.  Based on patch by Guilherme Polo.

- Issue #19286: Directories in ``package_data`` are no longer added to
  the filelist, preventing failure outlined in the ticket.

- Issue #19435: Fix directory traversal attack on CGIHttpRequestHandler.

Tests
-----

- Issue #18702: All skipped tests now reported as skipped.

- Issue #19085: Added basic tests for all tkinter widget options.

Build
-----

- Issue #15663: Revert OS X installer built-in Tcl/Tk support for 3.3.3.
  Some third-party projects, such as Matplotlib and PIL/Pillow,
  depended on being able to build with Tcl and Tk frameworks in
  /Library/Frameworks.


What's New in Python 3.3.3 release candidate 1?
===============================================

*Release date: 27-Oct-2013*

Core and Builtins
-----------------

- Issue #18603: Ensure that PyOS_mystricmp and PyOS_mystrnicmp are in the
  Python executable and not removed by the linker's optimizer.

- Issue #19279: UTF-7 decoder no more produces illegal strings.

- Fix macro expansion of _PyErr_OCCURRED(), and make sure to use it in at
  least one place so as to avoid regressions.

- Issue #19014: memoryview.cast() is now allowed on zero-length views.

- Issue #19098: Prevent overflow in the compiler when the recursion limit is set