@@ -13,6 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #19544 and Issue #7457: Restore the read_pkg_file method to
+  distutils.dist.DistributionMetadata accidentally removed in the undo of
+  distutils2.
+
 - Issue #1575020: Fixed support of 24-bit wave files on big-endian platforms.
 
 - Issue #19480: HTMLParser now accepts all valid start-tag names as defined
